--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,11 @@ lto = "thin"
 debug = false
 
 [dependencies]
-actix-files = "0.6.0-beta.15"
+actix-files = "0.6.0-beta.16"
 actix-rt = "2"
-actix-web = "4.0.0-beta.15"
-env_logger = "0.7"
-kube = {version = "0.67"}
+actix-web = "4.0.0-rc.2"
+env_logger = "0.9"
+kube = {version = "0.68"}
 k8s-openapi = {version = "0.14", default-features = false, features = ["v1_23"]}
-actix-helper-macros = "4.0.0-beta.15"
+actix-helper-macros = "4.0.0-rc.2"
 
