--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ actix-files = "0.6.0-beta.16"
 actix-rt = "2"
 actix-web = "4.0.0-rc.2"
 env_logger = "0.9"
-kube = {version = "0.68"}
+kube = "0.68"
 k8s-openapi = {version = "0.14", default-features = false, features = ["v1_23"]}
 actix-helper-macros = "4.0.0-rc.2"
 
