Cargo.toml:  + itertools

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,5 @@ env_logger = "0.9"
 kube = "0.72"
 k8s-openapi = {version = "0.14", default-features = false, features = ["v1_23"]}
 thiserror = "1.0.31"
+itertools = "0.10.3"
 
