--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ actix-files = "0.6"
 actix-rt = "2"
 actix-web = "4"
 env_logger = "0.9"
-itertools = "0.10.3"
+futures = "0.3.21"
 k8s-openapi = {version = "0.14", default-features = false, features = ["v1_23"]}
 kube = "0.72"
 thiserror = "1.0.31"
