--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ debug = 1
 
 [dependencies]
 actix-files = "0.6"
-actix-web = { version = "4.0.1", features = ["experimental-io-uring", "macros"] }
+actix-web = { version = "4.0.1", features = ["macros"] }
 futures = "0.3.21"
 k8s-openapi = {version = "0.14", default-features = false, features = ["v1_23"]}
 kube = "0.72"
