--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ debug = 1
 [dependencies]
 actix-files = "0.6"
 actix-web = { version = "4.0.1", features = ["macros"] }
+compact_str = "0.4.0"
 futures = "0.3.21"
 k8s-openapi = {version = "0.15", default-features = false, features = ["v1_23"]}
 kube = "0.73.1"
