--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,6 @@ futures = "0.3.21"
 k8s-openapi = {version = "0.15", default-features = false, features = ["v1_23"]}
 kube = "0.73.1"
 thiserror = "1.0.31"
+tikv-jemallocator = "0.5.0"
 tracing-subscriber = { version = "0.3.11", features = ["parking_lot", "env-filter"] }
 
